# tank_trouble

./: CMakeLists.txt  README.md  alter_tank.conf  cmake_linux.txt  cmake_mac.txt  cmake_win.txt
maps/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: bullet.c  bullet.h  colors.c  colors.h  graphics.c  graphics.h  items.c  items.h  keyboard_handler.c  keyboard_handler.h  main.c  main_manu.c  main_manu.h  manager.c  manager.h  map.c  map.h  particle.c  particle.h  physics.c  physics.h  setting.c  setting.h  simple_snake.c  struct.c  struct.h  structs.c  structs.h  tank.c  tank.h  ui.c  ui.h
